2007-06-30 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump MC version required to 4.27.
	* TODO: Updated.

2007-06-30 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-generic.c: Fix a leaked ref.

	* src/empathy.c: If we get a chatroom we have to create an
	EmpathyTpChatroom object.

	* src/Makefile.am: Fix build system, programs links to libempathy-gtk
	and libempathy.

	* configure.ac: libempathy does not depends on libgnome-vfs.

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/empathy-chat.c:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-tp-chat.h:
	* libempathy/empathy-filter.c:
	* libempathy/empathy-filter.h:
	* libempathy/empathy-filter.xml:
	* libempathy/Makefile.am: Filter incoming text channels and make
	status icon flash when there we receive a new message. Dispatch the
	channel only when we get a message and the user click on the icon.

2007-06-22 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/libempathy-gtk.pc.in:
	* libempathy-gtk/Makefile.am:
	* libempathy/libempathy.pc.in:
	* libempathy/Makefile.am:
	* configure.ac: Install libempathy and libempathy-gtk and make their
	API public.

2007-06-22 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: s/gossip/empathy/

2007-06-22 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/*.[ch]:
	* libempathy-gtk/*.[ch]:
	* src/*.[ch]: Rename all filenames starting with "gossip" by "empathy",
	change namespace of all gossip_*() functions to empathy_*().
	Fixes bug #444490 (Mario Danic, Xavier Claessens).

2007-06-21 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.9

2007-06-21 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: Fix typo causing warnings.

2007-06-21 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/gossip-contact-list-store.c:
	* libempathy-gtk/gossip-contact-list-view.c: