@@ -1,3 +1,9 @@
+2007-07-07 Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy-gtk/empathy-account-widget-generic.c: Workaround to fix a 
+	commonly reported crash.
+	* libempathy/empathy-tp-group.c: Add a missing check.
+
 2007-06-30 Xavier Claessens  <xclaesse@gmail.com>
 
 	* configure.ac: Bump MC version required to 4.27.
